--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,8 @@ This benchmark consists of Two-Level Lattice (TLL) NNs, which have been shown to
 \tab The networks in this benchmark are a subset of the ones used in Experiment 3 of FerlezKS22\cite{tll_fast_algorithm}. Each of these TLL NNs has n=2 inputs and m=1 output. The architecture of a TLL NN is further specified by two parameters: N, the number of local linear functions, and M, the number of selector sets. This benchmark contains TLLs of sizes N = M = 8, 16, 24, 32, 40, 48, 56, 64, with 30 randomly generated examples of each (the generation procedure is described in Section 6.1.1 of FerlezKS22\cite{tll_fast_algorithm}). At runtime, the specified verification timeout determines how many of these networks are included in the benchmark so as to achieve an overall 6-hour run time; this selection process is deterministic. Finally, a TLL NN has a natural representation using multiple computation paths Figure 1 of FerlezKS22\cite{tll_fast_algorithm}, but many tools are only compatible with fully-connected networks. Hence, the ONNX models in this benchmark implement TLL NNs by "stacking" these computation paths to make a fully connected NN (leading to sparse weight matrices: i.e. with many zero weights and biases). The TLLnet\cite{tll_net} class contains the code necessary to generate these implementations via the exportONNX method.\cite{tll_git}\\
 As mentioned before, the data for this benchmark consists of TLLNNs that were used by the authors for a previous study. The original data consists of neural networks of n = 2 and N = M. Thirty examples of N = M = 8, 16, 24, 32, 40, 48, 56 and 64, with each size having a common neuron count from 256 neurons at N = 8 to 163.834 neurons at N = 64. \\
 
+Paragraful 2 este fain....
+
 
 
 \begin{figure}[H]
