--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@ As mentioned before, the data for this benchmark consists of TLLNNs that were us
 
 Paragraful 2 este fain....
 
-
+asdasdsadas
 
 \begin{figure}[H]
 \centering
