--- a/main.tex
+++ b/main.tex
@@ -112,6 +112,7 @@ The falsified responses comes from the fact that, the output for most of the ins
 The remaining instance that fails with the "run\_instance\_timeout" seems to not be fixed after increasing the timeout from 480 seconds to 1000, further timeout increase will be made to test if any real timeout value can fix the problem.
 \end{frame}
 \begin{frame}[t]{Bibliography}
+\begin{thebibliography}{1}
 \bibitem{alpha-beta-instructions} Alpha-beta-CROWN instructions for running the VNN-COMP benchmarks, "https://github.com/Verified-Intelligence/alpha-beta-CROWN/blob/main/complete\_verifier/docs/vnn\_comp.md"
 \bibitem{auto_lirpa_repo} Auto-LiRPA repository, "https://github.com/Verified-Intelligence/auto\_LiRPA"
 \bibitem{miniconda} Miniconda, "https://docs.conda.io/projects/miniconda/en/latest/"
@@ -124,5 +125,6 @@ The remaining instance that fails with the "run\_instance\_timeout" seems to not
 \bibitem{traffic_signs_paper}
 Architecturing Binarized Neural Networks for Traffic Sign Recognition
 "https://arxiv.org/abs/2303.15005"
+\end{thebibliography}
 \end{frame}
 \end{document} 
